# inbox-collab

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.llm  README.md  compose.yaml  example.env  flake.nix  go.mod  go.sum  justfile  pyproject.toml  shell.nix  sqlc.yaml
.github/workflows/: ci.yml  lint.yml  test.yml
app/: main.py
app/internal/: __init__.py  message_parser.py  prompt.py  strings.py
cmd/: main.go
config/: config.example.toml
internal/app/: app.go  inbox_collab.go  llm.go  matrixnotifications.go  matrixoverview.go  messageextraction.go  pipeline.go  stages.go  threadsorting.go
internal/config/: config.go
internal/db/: db.go
internal/db/sqlc/: overrides.go  queries.sql  schema.sql
internal/mail/: fetcher.go  mail.go  parse.go  parser.go  parser_test.go  sender.go
internal/matrix/: client.go  commands.go  commands_test.go  format.go  matrix.go
internal/textprocessor/: extractor.go  extractor_test.go  levenshtein.go  levenshtein_test.go  llm.go  normalizer.go  normalizer_test.go  smith_waterman.go  smith_waterman_test.go
src/inbox_collab/: main.py
