[project]
name = "inbox-collab"
version = "0.1.0"
description = "Organize and discuss incoming team mails in Matrix threads"
readme = "README.md"
authors = [
    { name = "arne314" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.19",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.6",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
lint.extend-select = ["I"]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.8.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

