[project]
name = "inbox-collab"
version = "0.1.0"
description = "Organize and discuss incoming team mails in Matrix threads"
readme = "README.md"
authors = [
    { name = "arne314" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
]

[tool.ruff]
lint.extend-select = ["I"]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

